# number_detection

./: .gitignore  README.md  colab-run.yaml  pyproject.toml
notebooks/: mnist_colab_demo.ipynb
scripts/: run_in_colab.sh
src/number_detection/: __init__.py  __main__.py  train.py
