[project]
name = "number-detection"
version = "0.1.0"
description = "MNIST handwritten digit recognition demo with PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
number-detection = "number_detection.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/number_detection"]
